--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pymupdf>=1.26.7",
-    "pymupdf-fonts>=1.0.5",
+    "fpdf2>=2.7.0",
 ]
